# venv-kernel

./: .bumpversion.cfg  .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_venv_kernel.py
venv_kernel/: __init__.py  kernel_tool.py
